[package]
name = "sd-sys"
version = "1.0.0"
authors = ["Christian Klaue <mail@ck76.de>"]
edition = "2018"
description = "FFI for libsystemd"
readme = "README.md"
repository = "https://github.com/ente76/sd-sys"
license = "AGPL-3.0"
keywords = ["systemd", "libsystemd"]
links = "systemd"
categories = ["os::linux-apis", "external-ffi-bindings", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc ="0.2"

[build-dependencies]
pkg-config = "0.3"